# dirichle

./: CMakeLists.txt  README.md
cmake/: Configure.cmake
modules/jacobi/hybrid_Jacobi/: CMakeLists.txt  main.cpp
modules/jacobi/mpi_Jacobi/: main.cpp
modules/jacobi/omp_Jacobi/: main.cpp
modules/jacobi/seq_Jacobi/: CMakeLists.txt  main.cpp
modules/jacobi/std_Jacobi/: CMakeLists.txt  main.cpp
modules/jacobi/tbb_Jacobi/: main.cpp
modules/seidel/hybrid_Seidel/: CMakeLists.txt  main.cpp
modules/seidel/mpi_Seidel/: main.cpp
modules/seidel/omp_Seidel/: CMakeLists.txt  main.cpp
modules/seidel/seq_Seidel/: CMakeLists.txt  main.cpp
modules/seidel/std_Seidel/: CMakeLists.txt  main.cpp
modules/seidel/tbb_Seidel/: CMakeLists.txt  main.cpp
modules/wave/hybrid_Wave/: main.cpp
modules/wave/mpi_Wave/: main.cpp
modules/wave/omp_Wave/: CMakeLists.txt  main.cpp
modules/wave/seq_Wave/: CMakeLists.txt  main.cpp
modules/wave/std_Wave/: CMakeLists.txt  main.cpp
modules/wave/tbb_Wave/: main.cpp
